cmake_minimum_required(VERSION 3.13)
project(CppFirstWorkspace)

set(CMAKE_CXX_STANDARD 14)
add_executable(CppFirstWorkspace ./JMBOOK/josephus.cpp)
add_executable(generic-queue-using-linkedlist DataStructure/queue/cpp/generic-queue-using-linkedlist.cpp)
add_executable(1011 Boj/1011.cpp)
add_executable(1316 Boj/1316.cpp)
add_executable(heap DataStructure/heap/heap.cpp)
add_executable(A_ Codeforces/Round_741/A_.cpp)
add_executable(B_ Codeforces/Round_741/B_.cpp)